--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-hacker
+title: Welcome to Cindy's Weblog
+description: Cindy's weekly weblog for contemplation on the existence of the Internet.
