--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-hacker
+theme: jekyll-theme-midnight
 title: Welcome to Cindy's Weblog
 description: Cindy's weekly weblog for contemplation on the existence of the Internet.
